update: added meta description keywords

--- a/core/index.html
+++ b/core/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>LynxSphynx Co.</title>
-    <meta name="description" content="LynxSphynx Multimedia Official Website" />
+    <meta name="description" content="LynxSphynx Co. Official Website" />
     <meta
       name="keywords"
-      content="website design, logo design, business card design, photography, graphic design"
+      content="Enterprise-grade generative AI, generative AI solutions, affordable generative AI, AI for nonprofits, AI for SMBs, enterprise AI solutions, LLMs, large language models, embeddings, RAG, retrieval augmented generation, secure inference, AI deployments, custom AI solutions, scalable AI, AI pilot programs, social impact, mission-driven, change partners, West Africa initiatives, education support, health initiatives, environmental impact, 15% profit donation, cost-effective AI, secure AI, technical complexity management, business growth, workflow optimization, measurable impact, AI partnership, enterprise-grade AI for nonprofits, affordable AI solutions for SMBs, AI solutions that drive social impact, secure generative AI for nonprofits, custom AI solutions for social good, machine learning, artificial intelligence, AI implementation, enterprise technology, nonprofit technology, SMB solutions"
     />
 
     <link
@@ -41,6 +41,11 @@
           </ul>
           <ul class="probootstrap-right-nav hidden-xs">
             <li>
+              <a href="https://www.linkedin.com/in/rofyray/"
+                ><i class="icon-linkedin"></i
+              ></a>
+            </li>
+            <!-- <li>
               <a href="https://twitter.com/rofy_ray"
                 ><i class="icon-twitter"></i
               ></a>
@@ -49,7 +54,7 @@
               <a href="https://www.instagram.com/rofyray/"
                 ><i class="icon-instagram2"></i
               ></a>
-            </li>
+            </li> -->
           </ul>
           <div class="extra-text visible-xs">
             <a href="#" class="probootstrap-burger-menu"><i>Menu</i></a>
@@ -58,6 +63,11 @@
             <h5>Connect</h5>
             <ul class="social-buttons">
               <li>
+                <a href="https://www.linkedin.com/in/rofyray/"
+                  ><i class="icon-linkedin"></i
+                ></a>
+              </li>
+              <!-- <li>
                 <a href="https://twitter.com/rofy_ray"
                   ><i class="icon-twitter"></i
                 ></a>
@@ -66,7 +76,7 @@
                 <a href="https://www.instagram.com/rofyray/"
                   ><i class="icon-instagram2"></i
                 ></a>
-              </li>
+              </li> -->
             </ul>
           </div>
         </nav>
@@ -91,62 +101,35 @@
             </p>
             <h2>How We Work</h2>
             <p>
-              We are a social enterprise that combines technology and social
-              impact. We help nonprofits and small and medium-sized businesses
-              (SMBs) build a brand for less, by providing them with high-quality
-              technology and design solutions that empower them to grow and
-              achieve their goals. We work in four simple steps:
+              We are a social enterprise combining generative AI expertise with social impact. We help nonprofits and SMBs scale and innovate with affordable, enterprise-grade AI solutions.
             </p>
             <ul>
               <li>
-                <b>We find:</b> We identify the right partners who share our
-                vision and values, and who need our services to enhance their
-                brand identity and reach their potential.
+                <b>We find:</b> We partner with organizations that share our mission and need secure, scalable AI solutions.
               </li>
               <li>
-                <b>We plan:</b> We collaborate with our partners to understand
-                their needs, their challenges, and their opportunities, and we
-                devise a strategy that suits their budget and timeline.
+                <b>We plan:</b> We collaborate to understand goals, challenges, and opportunities, designing AI strategies that fit budget and timeline.
               </li>
               <li>
-                <b>We deliver: </b>We use our expertise and passion in
-                technology, design, and innovation to create customized and
-                user-friendly solutions that meet the needs and expectations of
-                our partners.
+                <b>We deliver:</b> We implement LLMs, embeddings, RAG pipelines, and AI integrations to create user-friendly, impactful solutions.
               </li>
               <li>
-                <b>We give back:</b> We donate 15% of our profits to support
-                smaller nonprofits and social initiatives that align with our
-                beliefs, and make a positive difference in the world by
-                improving the lives and well-being of the people and communities
-                in Ghana, Nigeria, and the Gambia.
+                <b>We give back:</b> We donate 15% of profits to education, health, and environmental initiatives in Ghana, Nigeria, Uganda, and the Gambia.
               </li>
             </ul>
 
             <h3>Our Partners</h3>
 
             <p>
-              We work with nonprofits and small and medium-sized businesses
-              (SMBs) who need some help with building or improving their brand
-              identity. We understand that many of them may not have the budget
-              or the time to hire qualified professionals to assist them in
-              areas like web app and mobile app design and development, logo
-              design, architectural design, 3D design and model building, cloud
-              migration and AI solution integrations.
+              We collaborate with nonprofits and SMBs that need enterprise-grade AI solutions but may lack the budget or technical resources. Many organizations require support with LLMs, embeddings, RAG pipelines, secure inference, and AI integrations.
             </p>
 
             <p>
-              Our core mission is to bridge this gap by providing them with
-              affordable and high-quality technology and design solutions that
-              empower them to grow and achieve their goals. By working with us,
-              they also support other social initiatives, as we donate 15% of
-              our profits to make a positive difference in the world.
+              Our mission is to bridge this gap with affordable, high-quality generative AI solutions that empower growth and impact. Every engagement also funds social initiatives, donating 15% of profits to education, health, and environmental programs.
             </p>
 
             <p>
-              We believe this enables entrepreneurs and founders who may not be
-              technically skilled to focus on what they do best - offering their
-              products, services or causing change in society.
+              This allows founders and entrepreneurs to focus on their mission while we handle the AI technology.
             </p>
           </div>
           <div class="col-md-3">
@@ -179,10 +162,7 @@
                 >
                   <div class="panel-body">
                     <p>
-                      We started this business to provide affordable and
-                      high-quality technology and design solutions to nonprofits
-                      and SMBs, while making social impact by empowering them to
-                      grow and achieve their goals.
+                      We started this business to provide affordable, enterprise-grade generative AI solutions to nonprofits and SMBs. Our mission is to empower organizations to scale, innovate, and achieve their goals while driving meaningful social impact.
                     </p>
                   </div>
                 </div>
@@ -211,11 +191,7 @@
                 >
                   <div class="panel-body">
                     <p>
-                      We provide the best services to our partners by leveraging
-                      our expertise and passion in technology, design, and
-                      innovation, to create customized and user-friendly
-                      solutions that enhance their brand identity and meet their
-                      needs and expectations.
+                      We deliver value to our partners by leveraging expertise in generative AI, LLMs, and applied machine learning. We create secure, user-friendly AI solutions tailored to meet organizational goals, optimize workflows, and drive measurable impact.
                     </p>
                   </div>
                 </div>
@@ -244,11 +220,7 @@
                 >
                   <div class="panel-body">
                     <p>
-                      We are dedicated to giving back 15% of our profits to
-                      support smaller nonprofits and social initiatives that
-                      align with our beliefs, and make a positive difference in
-                      the world by improving the lives and well-being of the
-                      people and communities in Ghana, Nigeria, and the Gambia.
+                      We dedicate 15% of our profits to support education, health, and environmental initiatives in Ghana, Nigeria, Uganda, and the Gambia. Every AI project you engage with contributes to meaningful social impact and stronger communities.
                     </p>
                   </div>
                 </div>
@@ -262,23 +234,16 @@
 
     <div class="container">
       <div class="probootstrap-cta probootstrap-animate">
-        <h2 class="mb20">Looking for New Technology?</h2>
+        <h2 class="mb20">Looking for Smarter Technology?</h2>
         <p>
-          You have a new business or nonprofit, but you need technology
-          solutions that represent it well. We can help you create those
-          solutions for less, by providing you with affordable and high-quality
-          web app and mobile app design and development, logo design,
-          architectural design, 3D design and model building, cloud migration
-          and AI solution integrations that empower you to grow your business or
-          nonprofit, and make a positive impact in the world.
+          You have a new business or nonprofit and need AI solutions that reflect your mission. We provide affordable, enterprise-grade generative AI—LLMs, embeddings, RAG pipelines, and secure integrations—that help you scale, engage your audience, and drive social impact.
         </p>
         <p>
-          Don’t start without a plan. Contact us today, and let us show you how
-          we can design your technology and support meaningful social causes.
+          Don’t start without a strategy. Contact us today to design your AI solutions and support education, health, and environmental initiatives in West Africa.
         </p>
         <p>
           <a href="/contact/" role="button" class="btn btn-primary"
-            >Let's Connect</a
+            >Launch Your AI Solution</a
           >
         </p>
       </div>
@@ -286,7 +251,7 @@
 
     <!-- END section cta -->
 
-    <section class="probootstrap-section">
+    <!-- <section class="probootstrap-section">
       <div class="container">
         <div class="row">
           <div class="col-md-12 section-heading probootstrap-animate">
@@ -321,7 +286,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- END section -->
 
     <!-- <footer class="probootstrap-footer probootstrap-bg"> -->
@@ -332,11 +297,7 @@
             <div class="probootstrap-footer-widget">
               <h4 class="heading">About LynxSphynx Co.</h4>
               <p>
-                We are LynxSphynx Co., a social enterprise that marries
-                technology and social impact. We help deliver a solution with a
-                precision to non-profits & small and medium-sized businesses
-                (SMBs), by providing them with innovative and affordable
-                technology solutions.
+                LynxSphynx Co. is a social enterprise uniting generative AI with social impact. We deliver precise, affordable AI solutions for nonprofits and SMBs - helping them innovate, scale, and focus on their mission.
               </p>
             </div>
           </div>
@@ -367,13 +328,18 @@
         <div class="row copyright">
           <div class="col-md-6">
             <div class="probootstrap-footer-widget">
-              <p>&copy; 2024 LynxSphynx Co.</p>
+              <p>&copy; 2025 LynxSphynx Co. All Rights Reserved.</p>
             </div>
           </div>
           <div class="col-md-6">
             <div class="probootstrap-footer-widget right">
               <ul class="probootstrap-social">
                 <li>
+                  <a href="https://www.linkedin.com/in/rofyray/"
+                    ><i class="icon-linkedin"></i
+                  ></a>
+                </li>
+                <!-- <li>
                   <a href="https://twitter.com/rofy_ray"
                     ><i class="icon-twitter"></i
                   ></a>
@@ -382,7 +348,7 @@
                   <a href="https://www.instagram.com/rofyray/"
                     ><i class="icon-instagram2"></i
                   ></a>
-                </li>
+                </li> -->
               </ul>
             </div>
           </div>
