--- a/projects/index.html
+++ b/projects/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>LynxSphynx Co. - PROJECTS</title>
-    <meta name="description" content="LynxSphynx Multimedia Official Website" />
+    <meta name="description" content="LynxSphynx Co. Official Website" />
     <meta
       name="keywords"
-      content="website design, logo design, business card design, photography, graphic design"
+      content="Enterprise-grade generative AI, generative AI solutions, affordable generative AI, AI for nonprofits, AI for SMBs, enterprise AI solutions, LLMs, large language models, embeddings, RAG, retrieval augmented generation, secure inference, AI deployments, custom AI solutions, scalable AI, AI pilot programs, social impact, mission-driven, change partners, West Africa initiatives, education support, health initiatives, environmental impact, 15% profit donation, cost-effective AI, secure AI, technical complexity management, business growth, workflow optimization, measurable impact, AI partnership, enterprise-grade AI for nonprofits, affordable AI solutions for SMBs, AI solutions that drive social impact, secure generative AI for nonprofits, custom AI solutions for social good, machine learning, artificial intelligence, AI implementation, enterprise technology, nonprofit technology, SMB solutions"
     />
 
     <link
